Решение проблемы с регистрацией через соц сети

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -221,9 +221,9 @@
             <div class="enter-social">
                 <p>{% trans %}registration_auth_in_socials{% endtrans %}</p>
                 <ul class="social-wrap unstyled">
-                    {#<li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('facebook') }}" class="social-wrap__link fb"><i class="fa fa-facebook"></i></a></li>#}
-                    {#<li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('vkontakte') }}" class="social-wrap__link vk"><i class="fa fa-vk"></i></a></li>#}
-                    {#<li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('google') }}" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a></li>#}
+                    <li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('facebook') }}" class="social-wrap__link fb"><i class="fa fa-facebook"></i></a></li>
+                    <li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('vkontakte') }}" class="social-wrap__link vk"><i class="fa fa-vk"></i></a></li>
+                    <li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('google') }}" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a></li>
                 </ul>
             </div>
         </div>
