Фикс имени шаблона при переходе на symfony 4.2

--- a/templates/catalog/product_edit.html.twig
+++ b/templates/catalog/product_edit.html.twig
@@ -37,7 +37,7 @@
 
                         <div class="box-field__input">
                             <div class="add-image js-image-add-input" {% if product.image %}style="display: none;"{% endif %}>
-                                <img src="{{ asset('bundles/app/img/btn-img-add.png') }}" class="add-image__img">
+                                <img src="/bundles/app/img/btn-img-add.png" class="add-image__img">
                                 <input type="file" id="fileuploadMainImage" class="add-image__input">
                             </div>
 
@@ -62,7 +62,7 @@
                                 {% endfor %}
                             </div>
                             <div class="add-image add-image--add-images js-add-pic-input">
-                                <img src="{{ asset('bundles/app/img/btn-img-add.png') }}" class="add-image__img">
+                                <img src="/bundles/app/img/btn-img-add.png" class="add-image__img">
                                 <input type="file" id="fileuploadAddImages" class="add-image__input">
                             </div>
                         </div>
