--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,53 +312,58 @@ button::-moz-focus-inner {
   .jq-radio.disabled {
     opacity: .55; }
 
-.jq-file {
-  padding-right: 150px; }
-  .jq-file input {
-    height: auto;
-    line-height: 1em;
-    cursor: pointer;
-    left: 0;
-    bottom: 0; }
-  .jq-file__browse {
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 140px;
-    height: 34px;
-    padding: 8px 8px 0;
-    font: normal 14px/18px 'MyriadPro', Arial, sans-serif;
-    color: #000;
-    white-space: nowrap;
-    text-align: center;
-    text-overflow: ellipsis;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    background: #fff; }
-  .jq-file__name {
-    display: none;
-    position: absolute;
-    top: 9px;
-    left: 160px;
-    font: normal 14px/18px 'MyriadPro', Arial, sans-serif;
-    color: rgba(0, 0, 0, 0.4); }
-  .jq-file__no-show .jq-file__name {
-    display: none; }
-  .jq-file:hover .jq-file__browse {
-    background: #f7f7f7; }
-  .jq-file:active .jq-file__browse {
-    background: #f7f7f7; }
-  .jq-file.focused .jq-file__name {
-    border: none; }
-  .jq-file.disabled {
+.jq-file input {
+  height: auto;
+  line-height: 1em;
+  cursor: pointer;
+  left: 0;
+  bottom: 0; }
+
+.jq-file__browse {
+  overflow: hidden;
+  box-sizing: border-box;
+  width: 140px;
+  height: 34px;
+  padding: 8px 8px 0;
+  font: normal 14px/18px 'MyriadPro', Arial, sans-serif;
+  color: #000;
+  white-space: nowrap;
+  text-align: center;
+  text-overflow: ellipsis;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff; }
+
+.jq-file__name {
+  display: none;
+  position: absolute;
+  top: 9px;
+  left: 160px;
+  font: normal 14px/18px 'MyriadPro', Arial, sans-serif;
+  color: rgba(0, 0, 0, 0.4); }
+
+.jq-file__no-show .jq-file__name {
+  display: none; }
+
+.jq-file:hover .jq-file__browse {
+  background: #f7f7f7; }
+
+.jq-file:active .jq-file__browse {
+  background: #f7f7f7; }
+
+.jq-file.focused .jq-file__name {
+  border: none; }
+
+.jq-file.disabled {
+  border-color: #CCC;
+  background: #F5F5F5;
+  box-shadow: none;
+  color: #888; }
+  .jq-file.disabled .jq-file__name, .jq-file.disabled .jq-file__browse {
     border-color: #CCC;
     background: #F5F5F5;
     box-shadow: none;
     color: #888; }
-    .jq-file.disabled .jq-file__name, .jq-file.disabled .jq-file__browse {
-      border-color: #CCC;
-      background: #F5F5F5;
-      box-shadow: none;
-      color: #888; }
 
 .jq-number {
   position: relative;
@@ -1579,6 +1584,8 @@ label {
 
 .box-field {
   margin-bottom: 30px; }
+  .box-field__input {
+    position: relative; }
   .box-field.col-5 {
     width: 61%; }
   .box-field.col-4 {
