--- a/assets/pages/add-model.css
+++ b/assets/pages/add-model.css
@@ -73,6 +73,29 @@
     border-color: #c91d24;
 }
 
+.add-model__file-upload-error {
+    display: none;
+    margin-bottom: 10px;
+    color: #c91d24;
+}
+
+.add-model__file-upload-process{
+    display: none;
+    overflow: hidden;
+    box-sizing: border-box;
+    width: 140px;
+    height: 34px;
+    padding: 8px 8px 0;
+    font: normal 14px/18px 'MyriadPro', Arial, sans-serif;
+    color: #000;
+    white-space: nowrap;
+    text-align: center;
+    text-overflow: ellipsis;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background: #fff;
+}
+
 .add-image {
     position: relative;
 }
