--- a/templates/catalog/product_edit.html.twig
+++ b/templates/catalog/product_edit.html.twig
@@ -69,7 +69,9 @@
                     </div>
                     <div class="box-field-group user js-image-wrapper js-files-drop">
                         <label class="box-field__label">{% trans %}model_files{% endtrans %} <span class="require-field-z">*</span></label>
-                        <div class="box-field__input">
+                        <div class="add-model__file-error"></div>
+                        <div class="add-model__file-upload-process"></div>
+                        <div class="box-field__input jq-file__no-show">
                             <input type="file" id="fileupload" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}"
                                    class="styler">
                         </div>
@@ -193,9 +195,23 @@
                         var wrapper = $(e.target).closest('.js-image-wrapper');
                         wrapper.find('.js-model-files').append(data.result.wp_container);
                     }
+                    $(".add-model__file-upload-process").html('0%').hide();
+                    $(".jq-file__no-show").show();
                 },
                 progressall: function (e, data) {
-
+                    var progress = parseInt(data.loaded / data.total * 100, 10);
+                    $(".add-model__file-upload-process").html(progress + '%')
+                },
+                add: function (e, data) {
+                    $(".add-model__file-upload-error").html('').hide();
+                    $(".add-model__file-upload-process").html('0%').show();
+                    $(".jq-file__no-show").hide();
+                    data.submit();
+                },
+                error: function (e, data) {
+                    $(".add-model__file-upload-process").html('0%').hide();
+                    $(".add-model__file-upload-error").html('Во время загрузки файла произошла ошибка, проверьте формат загружаемого файла. Его размер не должен превышать 500 Mb.').show();
+                    $(".jq-file__no-show").show();
                 }
             }).prop('disabled', !$.support.fileInput)
                 .parent().addClass($.support.fileInput ? undefined : 'disabled');
