--- a/templates/catalog/product_edit.html.twig
+++ b/templates/catalog/product_edit.html.twig
@@ -13,10 +13,19 @@
         <div class="wrap-left">
             <div class="box-form settings">
                 <form action="{{ path('catalog_product_edit_write', {alias:product.alias}) }}" class="js-add-model-form" method="POST">
-                    <div class="box-field col-5">
-                        <label class="box-field__label">{% trans %}model_name{% endtrans %} <span class="require-field-z">*</span></label>
-                        <div class="box-field__input">
-                            <input type="text" name="name" class="form-control" value="{{ product.name }}" />
+                    <div class="box-field-title">{% trans %}main_info{% endtrans %}</div>
+                    <div class="box-field box-field--2col">
+                        <div class="box-field__col">
+                            <label class="box-field__label">{% trans %}model_name{% endtrans %} <span class="require-field-z">*</span></label>
+                            <div class="box-field__input">
+                                <input type="text" name="name" class="form-control" value="{{ product.name }}" />
+                            </div>
+                        </div>
+                        <div class="box-field__col">
+                            <label class="box-field__label">{% trans %}model_name_en{% endtrans %} <span class="require-field-z">*</span></label>
+                            <div class="box-field__input">
+                                <input type="text" name="nameEn" class="form-control" value="{{ product.nameEn }}" />
+                            </div>
                         </div>
                     </div>
                     <div class="box-field col-5">
@@ -32,6 +41,10 @@
                             </select>
                         </div>
                     </div>
+                    <div class="box-field-line">
+                        <div class="box-field-line__line"></div>
+                    </div>
+                    <div class="box-field-title">{% trans %}model_images{% endtrans %}</div>
                     <div class="box-field-group user js-image-wrapper js-main-image-drop">
                         <label class="box-field__label">{% trans %}model_cover{% endtrans %} <span class="require-field-z">*</span></label>
 
@@ -67,6 +80,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="box-field-line">
+                        <div class="box-field-line__line"></div>
+                    </div>
+                    <div class="box-field-title">{% trans %}model_files{% endtrans %}</div>
                     <div class="box-field-group user js-image-wrapper js-files-drop">
                         <label class="box-field__label">{% trans %}model_files{% endtrans %} <span class="require-field-z">*</span></label>
                         <div class="add-model__file-error"></div>
@@ -81,10 +98,22 @@
                             {% endfor %}
                         </div>
                     </div>
-                    <div class="box-field col-5">
-                        <label class="box-field__label">{% trans %}model_manufacturer{% endtrans %}</label>
-                        <div class="box-field__input">
-                            <input type="text" name="manufacturer" class="form-control" value="{{ product.manufacturer }}" />
+                    <div class="box-field-line">
+                        <div class="box-field-line__line"></div>
+                    </div>
+                    <div class="box-field-title">{% trans %}model_info{% endtrans %}</div>
+                    <div class="box-field box-field--2col">
+                        <div class="box-field__col">
+                            <label class="box-field__label">{% trans %}model_manufacturer{% endtrans %}</label>
+                            <div class="box-field__input">
+                                <input type="text" name="manufacturer" class="form-control" value="{{ product.manufacturer }}" />
+                            </div>
+                        </div>
+                        <div class="box-field__col">
+                            <label class="box-field__label">{% trans %}model_manufacturer_en{% endtrans %}</label>
+                            <div class="box-field__input">
+                                <input type="text" name="manufacturerEn" class="form-control" value="{{ product.manufacturerEn }}" />
+                            </div>
                         </div>
                     </div>
                     <div class="box-field col-5">
@@ -117,10 +146,18 @@
                             </select>
                         </div>
                     </div>
-                    <div class="box-field col-5">
-                        <label class="box-field__label">{% trans %}model_description{% endtrans %}</label>
-                        <div class="box-field__input">
-                            <textarea name="text" class="form-control">{{ product.text }}</textarea>
+                    <div class="box-field box-field--2col">
+                        <div class="box-field__col">
+                            <label class="box-field__label">{% trans %}model_description{% endtrans %}</label>
+                            <div class="box-field__input">
+                                <textarea name="text" class="form-control">{{ product.text }}</textarea>
+                            </div>
+                        </div>
+                        <div class="box-field__col">
+                            <label class="box-field__label">{% trans %}model_description_en{% endtrans %}</label>
+                            <div class="box-field__input">
+                                <textarea name="textEn" class="form-control">{{ product.textEn }}</textarea>
+                            </div>
                         </div>
                     </div>
                     <button type="submit" class="button button_warning js-add-model-btn" onclick="editModel();return false;">{% trans %}edit{% endtrans %}</button>
