--- a/templates/catalog/add.html.twig
+++ b/templates/catalog/add.html.twig
@@ -93,20 +93,11 @@
                         <div class="box-field-line__line"></div>
                     </div>
                     <div class="box-field-title">{% trans %}model_info{% endtrans %}</div>
-                    <div class="box-field box-field--2col">
-                        <div class="box-field__col">
-                            <label class="box-field__label">{% trans %}model_manufacturer{% endtrans %}</label>
-                            <div class="box-field__input">
-                                <input type="text" name="manufacturer" class="form-control"/>
-                            </div>
+                    <div class="box-field col-5">
+                        <label class="box-field__label">{% trans %}model_manufacturer{% endtrans %}</label>
+                        <div class="box-field__input">
+                            <input type="text" name="manufacturer" class="form-control"/>
                         </div>
-                        <div class="box-field__col">
-                            <label class="box-field__label">{% trans %}model_manufacturer_en{% endtrans %}</label>
-                            <div class="box-field__input">
-                                <input type="text" name="manufacturerEn" class="form-control"/>
-                            </div>
-                        </div>
-
                     </div>
                     <div class="box-field col-5">
                         <label class="box-field__label">{% trans %}model_tags{% endtrans %}</label>
