--- a/templates/catalog/_product_in_category.html.twig
+++ b/templates/catalog/_product_in_category.html.twig
@@ -1,6 +1,6 @@
 <li class="product-list__item">
     <div class="product-list__img">
-        <a href="{{ path('catalog_product',{alias:e.alias}) }}"><img src="{% path e.image, 'big' %}" alt="{{ e.name }}" /></a>
+        <a href="{{ path('catalog_product',{alias:e.alias}) }}"><img src="{% if e.image and e.image.width == 1200 and e.image.height == 1200 %}{% path e.image, 'reference' %}{% else %}{% path e.image, 'big' %}{% endif %}" alt="{{ e.name }}" /></a>
         <a href="javascript:;" data-type="ajax" data-src="{{ path('catalog_product_popup',{id:e.id}) }}" class="product-list__ajax fancybox"></a>
     </div>
     <div class="product-list__cont">
