--- a/templates/cabinet/buy.html.twig
+++ b/templates/cabinet/buy.html.twig
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="button button_warning" onclick="buyModels();return false;">{% trans %}buy_cabinet{% endtrans %}</button>
+                    <button type="button" class="button button_warning" onclick="buyModels('{% if product %}{{ product.id }}{% endif %}');return false;">{% trans %}buy_cabinet{% endtrans %}</button>
                     <span class="help-text inline settings__result js-buy-models-result"></span>
                     {#<h4 class="box-form__title">Выберите способ оплаты</h4
                     <div class="payment__button-group">
