Убрано переключение языка

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,15 +40,15 @@
                         <li class="nav-list__item"><a href="{{ path('page_3') }}" class="nav-list__link"><span>{% trans %}buy_menu{% endtrans %}</span></a></li>
                         <li class="nav-list__item"><a href="{{ path('community') }}" class="nav-list__link"><span>{% trans %}community{% endtrans %}</span></a></li>
                         <li class="nav-list__item"><a href="{{ path('faq') }}" class="nav-list__link"><span>{% trans %}support{% endtrans %}</span></a></li>
-                        <li class="nav-list__item">
-                            {#<a href="#" data-target="#box-lang" class="nav-list__link arrow-down js-link-open">#}
-                                {#<span>{% trans %}language{% endtrans %}:</span>#}
-                                {#<span class="nav-list__icon">#}
-                                    {#<span class="ic ic_flag-{{ app.request.locale }}"></span>#}
-                                {#</span>#}
-                            {#</a>#}
-                            {{ sites() }}
-                        </li>
+{#                        <li class="nav-list__item">#}
+{#                            #}{#<a href="#" data-target="#box-lang" class="nav-list__link arrow-down js-link-open">#}
+{#                                #}{#<span>{% trans %}language{% endtrans %}:</span>#}
+{#                                #}{#<span class="nav-list__icon">#}
+{#                                    #}{#<span class="ic ic_flag-{{ app.request.locale }}"></span>#}
+{#                                #}{#</span>#}
+{#                            #}{#</a>#}
+{#                            {{ sites() }}#}
+{#                        </li>#}
                     </ul>
                 </nav>
             </div>
