--- a/templates/cabinet/social.html.twig
+++ b/templates/cabinet/social.html.twig
@@ -7,9 +7,12 @@
         <p>{% trans %}socials_left_text{% endtrans %}</p>
         <div class="settings-social">
             <ul class="social-wrap social-wrap__settings unstyled">
-                <li class="social-wrap__item active"> <a href="" class="social-wrap__link fb"><i class="fa fa-facebook"></i><i class="fa fa-check connect-icon"></i></a></li>
-                <li class="social-wrap__item"> <a href="" class="social-wrap__link vk"><i class="fa fa-vk"></i><i class="fa fa-check connect-icon"></i></a></li>
-                <li class="social-wrap__item"> <a href="#" class="social-wrap__link gp"><i class="fa fa-google-plus"></i><i class="fa fa-check connect-icon"></i></a></li>
+                <li class="social-wrap__item {% if app.user.facebookId %}active{% endif %}"> <a href="{{ hwi_oauth_login_url('facebook') }}" class="social-wrap__link fb"><i class="fa fa-facebook"></i></a></li>
+                <li class="social-wrap__item {% if app.user.vkontakteId %}active{% endif %}"> <a href="{{ hwi_oauth_login_url('vkontakte') }}" class="social-wrap__link vk"><i class="fa fa-vk"></i></a></li>
+                <li class="social-wrap__item {% if app.user.googleId %}active{% endif %}"> <a href="{{ hwi_oauth_login_url('google') }}" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a></li>
+{#                <li class="social-wrap__item active"> <a href="" class="social-wrap__link fb"><i class="fa fa-facebook"></i><i class="fa fa-check connect-icon"></i></a></li>#}
+{#                <li class="social-wrap__item"> <a href="" class="social-wrap__link vk"><i class="fa fa-vk"></i><i class="fa fa-check connect-icon"></i></a></li>#}
+{#                <li class="social-wrap__item"> <a href="#" class="social-wrap__link gp"><i class="fa fa-google-plus"></i><i class="fa fa-check connect-icon"></i></a></li>#}
             </ul>
         </div>
     </div>
