Ссылки на соц сети из админки

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -175,13 +175,7 @@
                     </div>
                     <p>{% trans %}about_sym_follow_us{% endtrans %}</p>
                     <ul class="social">
-                        <li class="social__item"><a href="#" class="social__link social__link_tw"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li class="social__item"><a href="#" class="social__link social__link_pin"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                        <li class="social__item"><a href="#" class="social__link social__link_fb"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li class="social__item"><a href="#" class="social__link social__link_gp"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                        <li class="social__item"><a href="#" class="social__link social__link_lin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li class="social__item"><a href="#" class="social__link social__link_ut"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                        <li class="social__item"><a href="#" class="social__link social__link_vk"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                        {{ socialLink() }}
                     </ul>
                 </div>
             </div>
