--- a/templates/catalog/_category_inside.html.twig
+++ b/templates/catalog/_category_inside.html.twig
@@ -4,6 +4,7 @@
             {% include 'catalog/_product_in_category.html.twig' with {'e':e} %}
         {% endfor %}
     </ul>
+    {{ knp_pagination_render(products) }}
 {% else %}
     <div class="product_list--empty">{% trans %}category_not_have_models{% endtrans %}</div>
 {% endif %}
