--- a/templates/catalog/best.html.twig
+++ b/templates/catalog/best.html.twig
@@ -14,7 +14,7 @@
         </div>
 
             {% if entities|length > 0 %}
-                <ul class="product-list col-4">
+                <ul class="product-list">
                     {% for e in entities %}
                         {% include 'catalog/_product_in_category.html.twig' with {'e':e} %}
                     {% endfor %}
