--- a/templates/community/index.html.twig
+++ b/templates/community/index.html.twig
@@ -32,7 +32,7 @@
         {#<div class="block-title sm">
             <h4>Новые работы в галерее <a href="#" class="link block-title__link">Прислать работу</a></h4>
         </div>
-        <ul class="product-list col-4 sm">
+        <ul class="product-list sm">
             <li class="product-list__item">
                 <div class="product-list__img"><a href="#product" class="fancybox"><img src="img/product-img1.png" alt=""></a></div>
                 <div class="product-list__cont">
