Замена select2 на selectize

--- a/templates/catalog/add.html.twig
+++ b/templates/catalog/add.html.twig
@@ -102,7 +102,7 @@
                     <div class="box-field col-5">
                         <label class="box-field__label">{% trans %}model_tags{% endtrans %}</label>
                         <div class="box-field__input">
-                            <select name="tags[]" multiple class="select2-tags form-control">
+                            <select name="tags[]" multiple class="js-selectize-add form-control">
                                 {% for e in tags %}
                                     <option value="{{ e.name }}">{{ e.name }}</option>
                                 {% endfor %}
@@ -112,7 +112,7 @@
                     <div class="box-field col-5">
                         <label class="box-field__label">{% trans %}model_po{% endtrans %}</label>
                         <div class="box-field__input">
-                            <select name="software[]" multiple class="select2 form-control">
+                            <select name="software[]" multiple class="js-selectize form-control">
                                 {% for e in software %}
                                     <option value="{{ e.id }}">{{ e.name }}</option>
                                 {% endfor %}
@@ -122,7 +122,7 @@
                     <div class="box-field col-5">
                         <label class="box-field__label">{% trans %}model_style{% endtrans %}</label>
                         <div class="box-field__input">
-                            <select name="style[]" multiple class="select2 form-control">
+                            <select name="style[]" multiple class="js-selectize form-control">
                                 {% for e in style %}
                                     <option value="{{ e.id }}">{{ e.name }}</option>
                                 {% endfor %}
